@@ -1,4 +1,4 @@
- /* config.h for dminiwm.c [ 0.2.4 ]
+ /* config.h for dminiwm.c [ 0.2.5 ]
  *
  *  Started from catwm 31/12/10
  *  Bad window error checking and numlock checking used from
@@ -28,13 +28,12 @@
 #define MOD1            Mod1Mask
 #define MOD4            Mod4Mask
 #define MASTER_SIZE     0.52
-#define TOP_PANEL       0  /* 1=Don't 0=Have the panel at the top instead of the bottom */
+#define TOP_PANEL       1  /* 1=Don't 0=Have the panel at the top instead of the bottom */
 #define PANEL_HEIGHT	18 /* 0 for no space for a panel */
 #define BORDER_WIDTH    2
 #define ATTACH_ASIDE    1  /* 0=TRUE, 1=New window is master */
 #define DEFAULT_MODE    0  /* 0=Vertical, 1=Fullscreen 2=Horizontal 3=grid*/
 #define FOLLOW_MOUSE    0  /* 1=Don't 0=Focus the window the mouse just entered */
-#define FOLLOW_WINDOW   0  /* 1=Don't 0=Follow the window when moved to a different desktop */
 #define CLICK_TO_FOCUS  1  /* 1=Don't 0=Focus an unfocused window when clicked */
 #define DESKTOPS        6  /* Must edit DESKTOPCHANGE keys to suit */
 
@@ -73,8 +72,9 @@ const char* shutdowncmd[]   = {"sudo","shutdown","-h","now",NULL};
 
 // Avoid multiple paste
 #define DESKTOPCHANGE(K,N) \
-    {  MOD1,             K,              change_desktop, {.i = N}}, \
-    {  MOD1|ShiftMask,   K,              client_to_desktop, {.i = N}},
+    {  MOD1,             K,        change_desktop, {.i = N}}, \
+    {  MOD1|ShiftMask,   K,        follow_client_to_desktop, {.i = N}}, \
+    {  MOD4|ShiftMask,   K,        client_to_desktop, {.i = N}},
 
 // Shortcuts
 static key keys[] = {
