@@ -1,3 +1,6 @@
+23/12/11
+  Added keyboard shortcut options to follow window to new desktop or not
+
 8/12/11
   Fix for fullscreen mode flicker
 
